--- a/index.html
+++ b/index.html
@@ -11,31 +11,40 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--header -->
     <header class="header">
-      <nav class="nav">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-header">Studio</span>
-        </a>
-        <ul class="nav-list">
-          <li><a href="./index.html" class="nav-link-current">Студія</a></li>
-          <li><a href="./portfoloio.html" class="nav-link">Портфоліо</a></li>
-          <li><a href="" class="nav-link"> Контакти</a></li>
+      <div class="container">
+        <nav class="nav">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-header">Studio</span>
+          </a>
+          <ul class="nav-list">
+            <li><a href="./index.html" class="nav-link-current">Студія</a></li>
+            <li><a href="./portfoloio.html" class="nav-link">Портфоліо</a></li>
+            <li><a href="" class="nav-link"> Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="header-list list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="list-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="list-link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="header-list list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="list-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="list-link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <!-- main -->
     <main>
@@ -49,135 +58,143 @@
       </section>
       <!-- benefits -->
       <section class="benefits">
-        <h2 class="visually-hidden">Переваги</h2>
-        <ul class="benefits-list list">
-          <li>
-            <h3 class="benefits-title">Увага до деталей</h3>
-            <p class="benefits-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Пунктуальність</h3>
-            <p class="benefits-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Планування</h3>
-            <p class="benefits-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Сучасні технології</h3>
-            <p class="benefits-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Переваги</h2>
+          <ul class="benefits-list list">
+            <li>
+              <h3 class="benefits-title">Увага до деталей</h3>
+              <p class="benefits-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">Пунктуальність</h3>
+              <p class="benefits-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">Планування</h3>
+              <p class="benefits-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefits-title">Сучасні технології</h3>
+              <p class="benefits-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- activity -->
       <section class="activity">
-        <h2 class="activity-title">Чим ми займаємося</h2>
-        <ul class="activity-list list">
-          <li>
-            <img
-              src="./image/studio/photo1.jpg"
-              alt="Набір текста на клавіатурі"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./image/studio/photo2.jpg"
-              alt="Робота на ноутбуці"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./image/studio/photo3.jpg"
-              alt="Робота за планшетом"
-              width="370"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="activity-title">Чим ми займаємося</h2>
+          <ul class="activity-list list">
+            <li>
+              <img
+                src="./image/studio/photo1.jpg"
+                alt="Набір текста на клавіатурі"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./image/studio/photo2.jpg"
+                alt="Робота на ноутбуці"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./image/studio/photo3.jpg"
+                alt="Робота за планшетом"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--team -->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./image/studio/img1.jpg"
-              alt="Співробітник Ігор Дем'яненко"
-              width="270"
-            />
-            <h3 class="team-person">Ігор Дем'яненко</h3>
-            <p lang="en" class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./image/studio/img2.jpg"
-              alt="Співробітник Ольга Рєпіна"
-              width="270"
-            />
-            <h3 class="team-person">Ольга Рєпіна</h3>
-            <p lang="en" class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./image/studio/img3.jpg"
-              alt="Співробітник Микола Тарасов"
-              width="270"
-            />
-            <h3 class="team-person">Микола Тарасов</h3>
-            <p lang="en" class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./image/studio/img4.jpg"
-              alt="Співробітник Михайло Єрмаков"
-              width="270"
-            />
-            <h3 class="team-person">Михайло Єрмаков</h3>
-            <p lang="en" class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./image/studio/img1.jpg"
+                alt="Співробітник Ігор Дем'яненко"
+                width="270"
+              />
+              <h3 class="team-person">Ігор Дем'яненко</h3>
+              <p lang="en" class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./image/studio/img2.jpg"
+                alt="Співробітник Ольга Рєпіна"
+                width="270"
+              />
+              <h3 class="team-person">Ольга Рєпіна</h3>
+              <p lang="en" class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./image/studio/img3.jpg"
+                alt="Співробітник Микола Тарасов"
+                width="270"
+              />
+              <h3 class="team-person">Микола Тарасов</h3>
+              <p lang="en" class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./image/studio/img4.jpg"
+                alt="Співробітник Михайло Єрмаков"
+                width="270"
+              />
+              <h3 class="team-person">Михайло Єрмаков</h3>
+              <p lang="en" class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <address>
-        <ul class="footer-list list">
-          <li>
-            <a
-              href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383859!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="footer-adress"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-contact"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-contact"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <address>
+          <ul class="footer-list list">
+            <li>
+              <a
+                href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383859!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="footer-adress"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="footer-contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="footer-contact"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
