--- a/index.html
+++ b/index.html
@@ -23,24 +23,28 @@
   <body>
     <!--header -->
     <header class="header">
-      <div class="container">
+      <div class="container main-header">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-header">Studio</span>
+        </a>
         <nav class="nav">
-          <a href="./index.html" class="logo"
-            >Web<span class="logo-header">Studio</span>
-          </a>
-          <ul class="nav-list">
-            <li><a href="./index.html" class="nav-link-current">Студія</a></li>
-            <li><a href="./portfoloio.html" class="nav-link">Портфоліо</a></li>
-            <li><a href="" class="nav-link"> Контакти</a></li>
+          <ul class="nav-list list">
+            <li class="item">
+              <a href="./index.html" class="nav-link-current">Студія</a>
+            </li>
+            <li class="item">
+              <a href="./portfoloio.html" class="nav-link">Портфоліо</a>
+            </li>
+            <li class="item"><a href="" class="nav-link"> Контакти</a></li>
           </ul>
         </nav>
         <ul class="header-list list">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="list-link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="list-link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -61,27 +65,27 @@
         <div class="container">
           <h2 class="visually-hidden">Переваги</h2>
           <ul class="benefits-list list">
-            <li>
+            <li class="item">
               <h3 class="benefits-title">Увага до деталей</h3>
               <p class="benefits-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="benefits-title">Пунктуальність</h3>
               <p class="benefits-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="benefits-title">Планування</h3>
               <p class="benefits-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="benefits-title">Сучасні технології</h3>
               <p class="benefits-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -96,21 +100,21 @@
         <div class="container">
           <h2 class="activity-title">Чим ми займаємося</h2>
           <ul class="activity-list list">
-            <li>
+            <li class="item">
               <img
                 src="./image/studio/photo1.jpg"
                 alt="Набір текста на клавіатурі"
                 width="370"
               />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./image/studio/photo2.jpg"
                 alt="Робота на ноутбуці"
                 width="370"
               />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./image/studio/photo3.jpg"
                 alt="Робота за планшетом"
@@ -131,8 +135,10 @@
                 alt="Співробітник Ігор Дем'яненко"
                 width="270"
               />
-              <h3 class="team-person">Ігор Дем'яненко</h3>
-              <p lang="en" class="team-text">Product Designer</p>
+              <div class="description">
+                <h3 class="team-person">Ігор Дем'яненко</h3>
+                <p lang="en" class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -140,8 +146,10 @@
                 alt="Співробітник Ольга Рєпіна"
                 width="270"
               />
-              <h3 class="team-person">Ольга Рєпіна</h3>
-              <p lang="en" class="team-text">Frontend Developer</p>
+              <div class="description">
+                <h3 class="team-person">Ольга Рєпіна</h3>
+                <p lang="en" class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -149,8 +157,10 @@
                 alt="Співробітник Микола Тарасов"
                 width="270"
               />
-              <h3 class="team-person">Микола Тарасов</h3>
-              <p lang="en" class="team-text">Marketing</p>
+              <div class="description">
+                <h3 class="team-person">Микола Тарасов</h3>
+                <p lang="en" class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -158,8 +168,10 @@
                 alt="Співробітник Михайло Єрмаков"
                 width="270"
               />
-              <h3 class="team-person">Михайло Єрмаков</h3>
-              <p lang="en" class="team-text">UI Designer</p>
+              <div class="description">
+                <h3 class="team-person">Михайло Єрмаков</h3>
+                <p lang="en" class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -167,7 +179,7 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container main-footer">
         <a href="./index.html" class="logo"
           >Web<span class="logo-footer">Studio</span></a
         >
