--- a/portfoloio.html
+++ b/portfoloio.html
@@ -24,7 +24,7 @@
     <!-- header -->
     <header class="header">
       <div class="container main-header">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo up"
           >Web<span class="logo-header">Studio</span>
         </a>
         <nav class="nav">
@@ -203,7 +203,7 @@
         >
         <address>
           <ul class="footer-list list">
-            <li>
+            <li class="item">
               <a
                 href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383859!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
                 target="_blank"
@@ -212,7 +212,7 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="mailto:info@devstudio.com" class="footer-contact"
                 >info@devstudio.com</a
               >
