--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <h1 class="hero-title">
-          Ефективні рішення для<br />
-          вашого бізнесу
-        </h1>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
       <!-- benefits -->
